--- a/slave/android/Dockerfile
+++ b/slave/android/Dockerfile
@@ -1,4 +1,4 @@
-FROM oberthur/jenkins-slave-base:1.5.0_1.23
+FROM oberthur/jenkins-slave-base:2.0
 
 MAINTAINER Kacper Piechota <k.piechota@oberthur.com>
 
@@ -33,5 +33,4 @@ RUN curl -fsSL http://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binar
   && unzip /opt/gradle-$GRADLE_VERSION-bin.zip -d /opt \
   && rm /opt/gradle-$GRADLE_VERSION-bin.zip \
   && apt-get update \
-  && apt-get install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 \
-  && apt-get install -y lib32z1
+  && apt-get install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
