--- a/slave/maven/Dockerfile
+++ b/slave/maven/Dockerfile
@@ -1,4 +1,4 @@
-FROM oberthur/jenkins-slave-base:1.5.0_1.23
+FROM oberthur/jenkins-slave-base:2.0
 
 ENV MAVEN_VERSION 3.3.3
 ENV MAVEN_HOME /usr/share/maven
