--- a/jenkins-job-builder/Dockerfile
+++ b/jenkins-job-builder/Dockerfile
@@ -3,23 +3,23 @@ FROM oberthur/docker-ubuntu-java:jdk8_8.51.16
 MAINTAINER Dawid Malinowski <d.malinowski@oberthur.com>
 
 WORKDIR /opt
+ENV BRANCH master
 
 RUN apt-get update \
     && apt-get install -y python-setuptools python-dev libyaml-dev git \
     # install python deps
     && easy_install pip \
     && pip install PyYAML \
-    && pip install -Iv https://pypi.python.org/packages/source/p/pbr/pbr-0.9.0.tar.gz \
-    && pip install six
+    && pip install six pbr
 
 RUN git clone https://github.com/oberthur/jenkins-job-builder.git \
     && cd jenkins-job-builder \
-    && git checkout develop \
+    && git checkout $BRANCH \
     && python setup.py install \
     # override python-jenkins with own version
-    && git clone https://github.com/oberthur/python-jenkins \
+    && git clone https://github.com/oberthur/python-jenkins.git \
     && cd python-jenkins \
-    && git checkout develop \
+    && git checkout $BRANCH \
     && python setup.py install
 
 # clean all cache to clean space
