--- a/slave/iso-builder/Dockerfile
+++ b/slave/iso-builder/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y apt-transport-https \
     && echo deb https://get.docker.com/ubuntu docker main > /etc/apt/sources.list.d/docker.list \
     && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 36A1D7869245C8950F966E92D8576A8BA88D21E9 \
     && apt-get update \
-    && apt-get install -y lxc-docker-$DOCKER_VERSION \
+    && apt-get install -y lxc-docker-$DOCKER_VERSION
 
 # Make sure the package repository is up to date.
 RUN apt-get update \
