--- a/slave/Dockerfile
+++ b/slave/Dockerfile
@@ -17,7 +17,7 @@ RUN mkdir -p /opt/jenkins-slave \
 
     # Make sure the package repository is up to date.
     && apt-get update \
-    && apt-get install -y git supervisor \
+    && apt-get install -y git supervisor openssh-client \
 
     # clean all cache to clean space
     && rm -rf /var/lib/apt/lists/* \
