--- a/slave/grunt/Dockerfile
+++ b/slave/grunt/Dockerfile
@@ -3,4 +3,5 @@ FROM oberthur/jenkins-slave-base:2.0.1
 ENV NPM_CONFIG_LOGLEVEL info
 
 RUN apt-get update && apt-get install -y nodejs npm bzip2 \
-    && ln -s /usr/bin/nodejs /usr/bin/node
+    && ln -s /usr/bin/nodejs /usr/bin/node \
+    && npm install -g grunt-cli
