--- a/slave/maven/Dockerfile
+++ b/slave/maven/Dockerfile
@@ -1,7 +1,8 @@
 FROM oberthur/jenkins-slave-base:2.0.1
 
-ENV MAVEN_VERSION 3.3.3
-ENV MAVEN_HOME /usr/share/maven
+ENV MAVEN_VERSION=3.3.3 \
+    MAVEN_HOME=/usr/share/maven \
+    PATH=/usr/bin/_docker:$PATH
 
 RUN curl -fsSL http://archive.apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
   && mv /usr/share/apache-maven-$MAVEN_VERSION /usr/share/maven \
