fixed sbt binary permission

--- a/slave/sbt/Dockerfile
+++ b/slave/sbt/Dockerfile
@@ -6,6 +6,6 @@ ENV SBT_VERSION=0.13.9 \
 RUN mkdir -p $SBT_HOME \
   && curl -L https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/$SBT_VERSION/sbt-launch.jar > $SBT_HOME/sbt-launch.jar \
   && echo '#!/bin/bash\njava $SBT_OPTS -jar $SBT_HOME/sbt-launch.jar "$@"' > /usr/bin/sbt \
-  && chmod u+x /usr/bin/sbt \
+  && chmod a+x /usr/bin/sbt \
   && sbt exit \
   && rm -fr /tmp/*
