disabled log formatting in sbt with _JAVA_OPTIONS

--- a/slave/sbt/Dockerfile
+++ b/slave/sbt/Dockerfile
@@ -2,6 +2,7 @@ FROM oberthur/jenkins-slave-base:2.0.2
 
 ENV SBT_VERSION=0.13.9 \
     SBT_HOME=/usr/share/sbt
+    _JAVA_OPTIONS="-Dsbt.log.noformat=true ${_JAVA_OPTIONS}"
 
 RUN mkdir -p $SBT_HOME \
   && curl -L https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/$SBT_VERSION/sbt-launch.jar > $SBT_HOME/sbt-launch.jar \
