--- a/slave/jdk8/Dockerfile
+++ b/slave/jdk8/Dockerfile
@@ -20,7 +20,7 @@ RUN curl -o /opt/jenkins-slave/swarm-client-$SWARM_VERSION-jar-with-dependencies
 
   # Make sure the package repository is up to date.
   && apt-get update \
-  && apt-get install -y git supervisor openssh-client unzip wget bzip2 nodejs npm \
+  && apt-get install -y git supervisor openssh-client unzip wget bzip2 nodejs npm gitstats \
   && npm install npm -g \
   && npm install -g bower \
   && ln -s /usr/bin/nodejs /usr/bin/node \
