--- a/slave/ruby/Dockerfile
+++ b/slave/ruby/Dockerfile
@@ -1,6 +1,8 @@
 FROM oberthur/docker-ubuntu-java:jdk8_8.91.14
 
-ENV SWARM_VERSION=2.0
+ENV SWARM_VERSION=2.0 \
+  ANT_VERSION=1.9.4 \
+  ANT_HOME=/usr/share/ant
 
 # Add external repository
 RUN add-apt-repository -y ppa:brightbox/ruby-ng-experimental
@@ -10,6 +12,11 @@ RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://
   && chmod +x /usr/bin/swarm_slave.sh \
   && mkdir -p /etc/supervisor/conf.d \
   && echo "[program:swarm-slave]\ncommand=/usr/bin/swarm_slave.sh\nuser=root" > /etc/supervisor/conf.d/supervisor.conf \
+
+  # install ant
+  && curl -fsSL http://archive.apache.org/dist/ant/binaries/apache-ant-$ANT_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
+  && mv /usr/share/apache-ant-$ANT_VERSION /usr/share/ant \
+  && ln -s /usr/share/ant/bin/ant /usr/bin/ant \
 
   # Make sure the package repository is up to date.
   && apt-get update \
