--- a/slave/simple/Dockerfile
+++ b/slave/simple/Dockerfile
@@ -11,7 +11,7 @@ RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://
 
   # Make sure the package repository is up to date.
   && apt-get update \
-  && apt-get install -y git supervisor openssh-client unzip wget bzip2 socat python-yaml \
+  && apt-get install -y git supervisor openssh-client unzip wget bzip2 socat python-yaml rsync \
 
   # clean all cache to clean space
   && rm -rf /var/lib/apt/lists/* \
