install ant196 on jdk7 slave

--- a/slave/jdk7/Dockerfile
+++ b/slave/jdk7/Dockerfile
@@ -4,6 +4,8 @@ ENV SWARM_VERSION=2.2 \
   GRADLE_VERSION=2.14.1 \
   SBT_VERSION=0.13.12 \
   MAVEN_VERSION=3.3.9 \
+  ANT_VERSION=1.9.6 \
+  ANT_HOME=/usr/share/ant \
   GRADLE_HOME=/usr/share/gradle \
   SBT_HOME=/usr/share/sbt \
   MAVEN_HOME=/usr/share/maven \
@@ -39,6 +41,11 @@ RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://
   && curl -fsSL http://apache.org/dist/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
   && mv /usr/share/apache-maven-$MAVEN_VERSION /usr/share/maven \
   && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn \
+
+  # install ant
+  && curl -fsSL http://archive.apache.org/dist/ant/binaries/apache-ant-$ANT_VERSION-bin.tar.gz | tar xzf - -C /usr/share \
+  && mv /usr/share/apache-ant-$ANT_VERSION /usr/share/ant \
+  && ln -s /usr/share/ant/bin/ant /usr/bin/ant \
 
   # install sbt
   && mkdir -p $SBT_HOME \
