Add docker related packages

--- a/slave/jdk7/Dockerfile
+++ b/slave/jdk7/Dockerfile
@@ -10,27 +10,44 @@ ENV SWARM_VERSION=2.2 \
   SBT_HOME=/usr/share/sbt \
   MAVEN_HOME=/usr/share/maven \
   NPM_CONFIG_LOGLEVEL=info \
-  _JAVA_OPTIONS="-Dsbt.log.noformat=true"
+  _JAVA_OPTIONS="-Dsbt.log.noformat=true" \
+  DOCKER_PATH=/opt/docker/bin
+
+ENV PATH="$PATH:$DOCKER_PATH"
 
 RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://repo.jenkins-ci.org/releases/org/jenkins-ci/plugins/swarm-client/${SWARM_VERSION}/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar \
   && echo '#!/bin/bash\n\nexec java -jar /opt/swarm-client-$SWARM_VERSION-jar-with-dependencies.jar -disableClientsUniqueId -username $JENKINS_USERNAME -password $JENKINS_PASSWORD -mode ${JENKINS_MODE:-exclusive} -name $JENKINS_SLAVE_NAME -executors ${JENKINS_EXEC_NR:-1} -master ${JENKINS_URL:-127.0.0.1} -fsroot $JENKINS_FS_ROOT -labels "${JENKINS_LABELS:-swarm}"' > /usr/bin/swarm_slave.sh \
   && chmod +x /usr/bin/swarm_slave.sh \
   && mkdir -p /etc/supervisor/conf.d \
-  && echo "[program:swarm-slave]\ncommand=/usr/bin/swarm_slave.sh\nuser=root" > /etc/supervisor/conf.d/supervisor.conf \
+  && echo "[program:swarm-slave]\ncommand=/usr/bin/swarm_slave.sh\nuser=root\n\n[program:docker-in-docker]\ncommand=/usr/bin/docker-in-docker.sh\nuser=root" > /etc/supervisor/conf.d/supervisor.conf \
+
+  # add cassandra repo
+  && echo "deb http://debian.datastax.com/community stable main" | tee -a /etc/apt/sources.list.d/cassandra.sources.list \
+  && curl -L http://debian.datastax.com/debian/repo_key | apt-key add - \
 
   # Make sure the package repository is up to date.
   && apt-get update \
-  && apt-get install -y git supervisor openssh-client zip unzip wget bzip2 nodejs npm gitstats python-yaml python-jinja2 rsync \
+  && apt-get install -y git supervisor openssh-client zip unzip wget bzip2 nodejs npm gitstats python-yaml python-jinja2 cassandra-tools rsync  \
   && npm install npm -g \
   && npm install -g bower \
   && ln -s /usr/bin/nodejs /usr/bin/node \
 
-  # install gradle 
+  # install gradle
   && curl -L https://services.gradle.org/distributions/gradle-$GRADLE_VERSION-all.zip > /usr/share/gradle-$GRADLE_VERSION-all.zip \
   && unzip -d /usr/share/ /usr/share/gradle-$GRADLE_VERSION-all.zip \
   && ln -s /usr/share/gradle-$GRADLE_VERSION /usr/share/gradle \
   && rm /usr/share/gradle-$GRADLE_VERSION-all.zip \
   && ln -s /usr/share/gradle/bin/gradle /usr/bin/gradle \
+
+  # adding RSYNC MC
+  && apt-get install -y mc rsync \
+
+  # adding BUILD-TOOLS
+  && apt-get install -y build-essential \
+
+  # update path
+  && mkdir -p $DOCKER_PATH \
+  && apt-get install -y iptables kmod libnfnetlink0 module-init-tools \
 
   # clean all cache to clean space
   && rm -rf /var/lib/apt/lists/* \
