--- a/slave/rpmbuilder/Dockerfile
+++ b/slave/rpmbuilder/Dockerfile
@@ -7,7 +7,7 @@ ENV SWARM_VERSION=2.2 \
     KERNEL_VERSION=2.6.32-696.1.1.el6.i686
 
 COPY rpmmacros /root/.rpmmacros
-COPY fakeuname.sh /usr/local/bin/fakeuname.sh
+COPY fakeuname.sh /usr/local/sbin/fakeuname.sh
 
 RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://repo.jenkins-ci.org/releases/org/jenkins-ci/plugins/swarm-client/${SWARM_VERSION}/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar \
   && echo -e '#!/bin/bash\n\nexec java -jar /opt/swarm-client-$SWARM_VERSION-jar-with-dependencies.jar -disableClientsUniqueId -username $JENKINS_USERNAME -password $JENKINS_PASSWORD -mode ${JENKINS_MODE:-exclusive} -name $JENKINS_SLAVE_NAME -executors ${JENKINS_EXEC_NR:-1} -master ${JENKINS_URL:-127.0.0.1} -fsroot $JENKINS_FS_ROOT -labels "${JENKINS_LABELS:-swarm}"' > /usr/bin/swarm_slave.sh \
@@ -23,8 +23,8 @@ RUN curl -o /opt/swarm-client-${SWARM_VERSION}-jar-with-dependencies.jar http://
   && echo -e "[program:swarm_slave]\ncommand=/usr/bin/swarm_slave.sh\nuser=root" > /etc/supervisord/conf.d/supervisor.ini \
 
   && rpmdev-setuptree \
-  && chmod 700 /usr/local/bin/fakeuname.sh \
-  && ln -s /usr/local/bin/fakeuname.sh /usr/local/bin/uname \
+  && chmod 700 /usr/local/sbin/fakeuname.sh \
+  && ln -s /usr/local/sbin/fakeuname.sh /usr/local/sbin/uname \
 
 # clean all cache to clean space
   && rm -rf /var/cache/yum/* \
